# Explore_Direct2D

./: CMakeLists.txt  DPIScale.h  Explore_Direct2D.h  MainWindow.cpp  MainWindow.h  MyEllipse.h  Resources.h  main.cpp
src/: BaseWindow.h  DPIScale.h  Explore_Direct2D.cpp  Explore_utility.cpp  Explore_utility.h  MainWindow.cpp  MainWindow.h  MyEllipse.h  My_curve.h  My_grid.cpp  My_grid.h  Resources.rc  main.cpp
src/Unit_test/: CMakeLists.txt  Unit_test.cpp
